# switcher

./: .gitignore  Cargo.toml  README.md
src/: last_right_click.rs  load_config.rs  main.rs
